<resources>
    <string name="app_name">Ivan</string>
    <string name="mostrar">A/L</string>
    <string name="edit"/>
    <string name="foto"/>
    <string name="ingresa_un_nombre">Ingresa Un Nombre</string>
    <string name="agregar">Agregar</string>
    <string name="retirar_de_la_lita">R/L</string>
    <string name="lista_de_nombres">Lista de Nombres</string>
    <string name="lista_de_eleccion">Lista de eleccion</string>
    <string name="prueva_de_animacion">Prueva de animacion</string>
    <string name="rolando">Rolando</string>
    <string name="filtrar">Filtrar</string>
    <string name="lista_de_acciones">Lista de Acciones</string>
    <string name="filtrar_nombres">Filtrar Nombres</string>
    <string name="libre">Libre</string>
    <string name="cerrar_dialogo">cerrar</string>
    <string name="tiene_que_ingresar">Tiene que ingresar</string>
    <string name="un_nombre">Un Nombre</string>
    <string name="lista_de_usuarios">Lista de Usuarios</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="ñ">Ñ</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
</resources>