<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#818181"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/fondo_lista_text_view"
        android:text="@string/lista_de_nombres"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"/>

    <ImageView
        android:id="@+id/foto_menu"
        android:layout_width="30dp"
        android:layout_height="27dp"
        android:background="@drawable/fondo_menu_abrir"
        android:contentDescription="@string/foto"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_lista_text_view"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/titulo"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_lista_text_view"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/textView"/>

    <ImageView
        android:id="@+id/barra"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_above="@+id/contenedor"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="#000000"
        android:contentDescription="@string/foto" />

    <RelativeLayout
        android:id="@+id/contenedor1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#303030"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/retirar_lista"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_boton"
            android:onClick="retirar"
            android:text="@string/retirar_de_la_lita"
            android:textColor="#000000"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="5dp"/>

        <EditText
            android:singleLine="true"
            android:background="@drawable/fondo_edittext"
            android:hint="@string/ingresa_un_nombre"
            android:textColor="#FFFFFF"
            android:textColorHint="#000000"
            android:id="@+id/editTextRetirar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginVertical="15dp"
            android:layout_toStartOf="@id/retirar_lista"
            android:layout_toEndOf="@id/imagen_agregar"
            android:paddingStart="20sp"
            tools:ignore="Autofill,RtlSymmetry,TextFields" />

        <Button
            android:contentDescription="@string/foto"
            android:id="@+id/imagen_agregar"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/flecha"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/contenedor"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#303030"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/agregar_lista"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_boton"
            android:onClick="mostrar"
            android:text="@string/mostrar"
            android:textColor="#000000"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="5dp"/>

        <EditText
            android:singleLine="true"
            android:id="@+id/editTextAgregar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/fondo_edittext"
            android:hint="@string/ingresa_un_nombre"
            android:textColor="#FFFFFF"
            android:textColorHint="#000000"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginVertical="15dp"
            android:layout_toStartOf="@id/imagen_quitar"
            android:layout_toEndOf="@id/agregar_lista"
            android:paddingStart="20sp"
            tools:ignore="Autofill,RtlSymmetry,TextFields" />

        <Button
            android:id="@+id/imagen_quitar"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/flecha_dos"
            android:contentDescription="@string/foto"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="5dp"/>

    </RelativeLayout>

    <ImageView
        android:contentDescription="@string/foto"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#000000"
        android:layout_above="@id/filtrar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/filtrar"
        android:layout_above="@id/barra">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="40dp"
        android:background="#00FA81"
        android:layout_width="wrap_content">

        <TextView
            android:gravity="center"
            android:id="@+id/a"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/a"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/b"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/b"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:gravity="center"
            android:id="@+id/c"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/c"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:gravity="center"
            android:id="@+id/d"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/d"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:gravity="center"
            android:id="@+id/e"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/e"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:gravity="center"
            android:id="@+id/f"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/f"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:gravity="center"
            android:id="@+id/g"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/g"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:gravity="center"
            android:id="@+id/h"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/h"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:gravity="center"
            android:id="@+id/i"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/i"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:gravity="center"
            android:id="@+id/j"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/j"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/k"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/k"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/l"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/l"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/m"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/m"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/n"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/n"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/ñ"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/ñ"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/o"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/o"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/p"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/p"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/q"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/q"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/r"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/r"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/s"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/s"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/t"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/t"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/u"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/u"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/v"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/v"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/w"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/w"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/x"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/x"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/y"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/y"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/z"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/z"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
    </HorizontalScrollView>

    <RelativeLayout
        android:id="@+id/tapa_filtrar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#818181"
        android:layout_above="@id/barra"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/mostrar_barra_filtrado"
            android:layout_margin="15dp"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/foto"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/flecha_tres"/>

    </RelativeLayout>

</RelativeLayout>