<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="600dp"
    android:background="@drawable/fondo_dialogo"
    android:id="@+id/menu_desplegable"
    android:layout_gravity="center"
    android:paddingHorizontal="20dp">

    <TextView
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="33sp"
        android:text="@string/lista_de_acciones"
        android:textColor="#2A2A2A"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <LinearLayout
            android:id="@+id/filtrar_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="15dp"
                android:background="@drawable/extencion_mensaje"
                android:contentDescription="@string/foto" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_lista"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/logostop"
                    android:contentDescription="@string/foto" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/filtrar_nombres"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/libre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="15dp"
                android:background="@drawable/extencion_mensaje"
                android:contentDescription="@string/foto" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_lista"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/logostop"
                    android:contentDescription="@string/foto" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/libre"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
